Fix double collapsed class (#325)

--- a/manon/header-navigation-collapsible.scss
+++ b/manon/header-navigation-collapsible.scss
@@ -13,7 +13,6 @@ body>header nav.collapsible {
 
     /* Menu below breakpoint */
     button.collapsible-toggle {
-      display: flex;
       order: 1;
       margin-left: auto;
       border: 0;
